# cmake_qt_demo

./: CMakeLists.txt  README.md  main.cpp  widget.cpp  widget.h  widget.ui
resources/: resources.qrc
